# fast-api-server

./: .gitignore  main.py  pyproject.toml
config/: config.yaml
db/: connect.py
migrations/versions/: 801dcb28f3cd_init.py
src/: config.py  models.py
src/repository/: posts.py
src/router/: posts.py
src/schemas/: posts.py
src/utils/: parse_data.py
