[tool.poetry]
name = "python-fast-api"
version = "0.1.0"
description = ""
authors = ["Olena Boldysheva <adv55577@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
SQLAlchemy = "^1.4.42"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
